--- a/aula2.qmd
+++ b/aula2.qmd
@@ -69,10 +69,10 @@ ggplot(df.bcb, aes(x = ref.date, y = value)) +
   geom_point(color = "#117A65", size = 1.5) +
   scale_y_continuous(labels = label_percent(scale = 1)) +
   labs(
-    title = 'Evolução da Taxa CDI no Brasil',
+    title = 'Taxa de crescimento do PIB real - Estados Unidos',
     subtitle = 'Data: 1970-2015',
     x = 'Ano',
-    y = 'Taxa de Juros CDI (% a.d.)',
+    y = 'Taxa de crescimento do PIB real (% a.d.)',
     caption = paste0('Período: ', format(min(df.bcb$ref.date), "%d/%m/%Y"), 
                      ' até ', format(max(df.bcb$ref.date), "%d/%m/%Y"))
   ) +
